--- a/src/css/register.css
+++ b/src/css/register.css
@@ -1,3 +1,12 @@
+body {
+    margin:0;
+    padding:0;
+    font: 14px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: #404040;
+}
+.ActiveFav {
+    color:darkgreen;
+}
 .register-title {
     width: 270px;
     line-height: 43px;
