--- a/src/css/sidemenu.css
+++ b/src/css/sidemenu.css
@@ -1,3 +1,10 @@
+body {
+    margin:0;
+    padding:0;
+    font: 14px/20px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: #404040;
+}
+
 .side-menu {
     width:150px;
     color:black;
