--- a/HTMLEditor/style.css
+++ b/HTMLEditor/style.css
@@ -61,13 +61,15 @@ body {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 #CSSContent {
-    background: #2E2E2E;
+    background: #BDBDBD;
     font-size: 12px;
-    color: #FAFAFA;
+    color: grey;
     width: 98%;
     height: 40%;
     padding: 1%;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    overflow-y:scroll;
+
 }
 #JSContent {
     background: #2E2E2E;
