--- a/HTMLEditor/style.css
+++ b/HTMLEditor/style.css
@@ -61,14 +61,13 @@ body {
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 #CSSContent {
-    background: #BDBDBD;
+    background: #2E2E2E;
     font-size: 12px;
-    color: grey;
+    color: #FAFAFA;
     width: 98%;
     height: 40%;
     padding: 1%;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    overflow-y:scroll;
 
 }
 #JSContent {
@@ -83,15 +82,64 @@ body {
 .hide {
     display:none;
 }
-.display {
-    display:block;
-    resize: none;
+.Content1 {
+    display:none;
 }
 
 .displayResult {
     width: 48%;
     float: right;
     margin-right: 10px;
-    border: #D8D8D8 2px solid;
     display:inline;
+}
+
+.tab-box1 {
+    font-family:"Inconsolata";
+    width:100%;
+    padding-bottom:5px;
+}
+.tab-box1 a  {
+    text-decoration:none;
+    background-color: #A9E2F3;
+    color:#084B8A;
+    border-bottom: 0;
+    padding: 6px 15px;
+
+}
+
+.tab-box1 a.activeLink {
+    background-color: #084B8A;
+    color:#A9E2F3;
+    border-bottom: 0;
+    padding: 6px 15px;
+}
+
+.tab-box1 a.activeLink {
+    background-color: #084B8A;
+    color:#A9E2F3;
+    border-bottom: 0;
+    padding: 6px 15px;
+}
+#Result {
+    width: 98%;
+    padding: 1%;
+
+}
+#CSSTags {
+    width: 98%;
+    padding: 1%;
+    overflow-y: scroll;
+
+}#HTMLTags {
+    width: 98%;
+    padding: 1%;
+     overflow-y: scroll;
+ }#JSTags {
+      width: 98%;
+      padding: 1%;
+      overflow-y: scroll;
+  }
+.display {
+    display:block;
+    resize: none;
 }
